Taking into account @jesseeichar's feedback
- Using a set instead of a list to check if MD has to be deleted
- Integer.valueOf() instead of new Integer()